<resources>
    <string name="app_name">Donezo</string>
    <string name="initial_onboarding_title">Add Todos</string>
    <string name="initial_onboarding_subtitle">Stay organized</string>
    <string name="middle_onboarding_title">Do Todos</string>
    <string name="middle_onboarding_subtitle">Stay on top of things</string>
    <string name="onboarding_button">Let\'s go</string>
    <string name="final_onboarding_title">Donezo</string>
    <string name="final_onboarding_subtitle">Simple. Clean</string>
    <string name="login_title">Login</string>
    <string name="login_subtitle">you know what to do</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">Or</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_bottom_text">No ads. Always free.</string>
    <string name="login_content_desc">login logo</string>
    <string name="forgot_password">forgot password?</string>
    <string name="signup">Signup</string>
    <string name="signup_subtitle">almost there</string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="register">register</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_subtitle">happens to the best of us \nenter the email you used to sign up</string>
    <string name="add">Add</string>
    <string name="logout">logout</string>
    <string name="todos">Todos</string>
    <string name="all_donezo">All Donezo!</string>
    <string name="add_todo_input_text">What do you want to do?</string>
    <string name="app_logo">App logo</string>
    <string name="app_name">Donezo</string>
</resources>